@@ -70,6 +70,8 @@ public class LogViewer extends JPanel implements DefaultFocusComponent
 		ListModel model = Log.getLogListModel();
 		model.addListDataListener(new ListHandler());
 		list = new LogList(model);
+		list.setFixedCellHeight(list.getFontMetrics(list.getFont())
+			.getHeight());
 
 		add(BorderLayout.NORTH,caption);
 		JScrollPane scroller = new JScrollPane(list);
